初步完成lab2
Signed-off-by: LittleWool <a996649790@163.com>